environments/gloo-edge-portal/5-global-edge-config/base/active/argo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: cf-upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'argocd-edge.kapoozi.com'
    options:
      extauth:
        configRef:
          name: argo-okta
          namespace: gloo-system
    routes:
    - matchers:
      - prefix: /argo
      - prefix: /callback
      #options:
      #  prefixRewrite: /argo
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-443
            namespace: gloo-system
